# Climber-Engine

./: .gitignore  CHANGELOG.md  Dockerfile.frontend  LICENSE  PPT_Script.md  PROJECT_SUMMARY.md  README.md  STARTUP_GUIDE.md  check_status.sh  create_desktop_shortcut.sh  docker-compose.yml  nginx.frontend.conf  presentation.html  start.bat  start.sh
.history/: PPT_Outline_20250912190455.md  PPT_Outline_20250912201234.md  PPT_Outline_20250912201419.md  PPT_Script_20250912190616.md  PPT_Script_20250912193115.md  PPT_Script_20250912194118.md  PPT_Script_20250912194223.md  PPT_Script_20250912194357.md  PPT_Script_20250912200313.md  PPT_Script_20250912200711.html  PPT_Script_20250912201201.md  README_20250912190423.md  README_20250912190424.md  README_20250912193115.md
.trae/documents/: 登攀引擎开发方案.md  登攀引擎技术架构文档.md
.trae/rules/: project_rules.md
backend/: Dockerfile  README.md  climber_recorder_server.py  docker-entrypoint.sh  generate_sample_learning_content.py  init_db.py  main.py  pyproject.toml  simple_agent_test.py  test_agent_demo.py  test_agents_with_deepseek.py  test_climber_recorder_llm.py  test_enhanced_coding_tutor.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agents.py  climber_recorder.py  coding_sessions.py  coding_tutor_agent.py  conversations.py  knowledge.py  learning_tasks.py  mcp.py  skill_assessments.py  tech_stack_agent.py  tech_stack_scheduler.py  technical_debt.py  tools.py  users.py
backend/app/config/: coding_tutor_agent_config.yaml  tech_knowledge_base.yaml  tech_stack_agent_config.yaml
backend/app/core/: app.py  config.py  database.py  exceptions.py  logger.py  security.py
backend/app/models/: __init__.py  agent.py  code_record.py  coding_session.py  conversation.py  knowledge.py  learning_content.py  learning_progress.py  learning_task.py  mcp_session.py  skill_assessment.py  tech_stack_config.py  technical_debt.py  tool.py  user.py
backend/app/schemas/: __init__.py  agent.py  coding_session.py  conversation.py  knowledge.py  learning_content.py  learning_progress.py  learning_task.py  mcp.py  mcp_session.py  skill_assessment.py  tech_stack_config.py  technical_debt.py  tool.py  user.py
backend/app/services/: __init__.py  agent_service.py  ai_service.py  climber_recorder_service.py  coding_session_service.py  coding_tutor_agent.py  conversation_service.py  knowledge_service.py  learning_content_data_service.py  learning_task_service.py  mcp_service.py  skill_assessment_service.py  tech_stack_data_service.py  tech_stack_scheduler.py  tech_stack_summary_agent.py  technical_debt_service.py  tool_service.py  user_service.py
backend/app/utils/: __init__.py  ai_client.py  logger.py  mcp_client.py
backend/tests/: debug_agent.py  test_ai_integration.py  test_climber_recorder_llm.py  test_coding_tutor_demo.py  test_data_generator.py  test_e2e_integration.py  test_llm_simple.py  test_local_features.py  test_real_llm.py  test_tech_stack_agent.py
src/: App.tsx
src/components/: LearningCenter.tsx  TechnicalDebtBalanceSheet.tsx
src/pages/: ArticleDetail.tsx  CodeAnalysis.tsx  CodeRecord.tsx  Home.tsx  Launch.tsx  LearningCenter.tsx  QuestionPractice.tsx  Settings.tsx  TechDebtReport.tsx
src/services/: api.ts  learningService.ts  technicalDebtService.ts
